--- a/styles/main.css
+++ b/styles/main.css
@@ -33,6 +33,7 @@ footer, header, hgroup, menu, nav, section {
 body {
 	line-height: 1;
 	color: #073b4c !important
+
 }
 ol, ul {
 	list-style: none;
@@ -60,4 +61,14 @@ a {
 	flex: 35%; 
 	text-align: center;
 }
+button {
+	background-color: blue; /* Green */
+	border: none;
+	color: white;
+	padding: 15px 32px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+  }
 
