--- a/styles/main.css
+++ b/styles/main.css
@@ -54,9 +54,10 @@ table {
 /* our rules start here */
 nav {
     list-style-type: none;
-    margin: 10px;
     padding: 10px;
+	background-color:#000000;
 }
+
 footer {
 	position: absolute;
   	bottom: 0;
@@ -64,6 +65,7 @@ footer {
   	height: 2.5rem;
 	margin: 10px;
     padding: 10px;
+	background-color:#000000
 }
 
 a {
@@ -124,10 +126,10 @@ button:hover {
 	grid-auto-columns: minmax(150px, auto);
 	grid-auto-flow: row; /* change this to row instead of column*/
   }
-  
+
 a:visited {
 	background-color: lightblue;
 	border-color: hotpink;
 	color: hotpink;
-  }
+}
   
